# Braille-Glove

./: .gitignore  README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/api/: app.py  schemas.py
backend/api/routes/: contacts.py  device.py  messages.py  testing.py
backend/ble/: gatt.py  manager.py  protocol.py
backend/braille/: charset.py  codec.py  constants.py
backend/core/: config.py  queue_manager.py  session.py
backend/db/: engine.py  models.py  repository.py
backend/device/: base.py  esp32.py  simulator.py
backend/messaging/: base.py  mock_impl.py  telegram_impl.py
backend/tests/: conftest.py  test_braille_codec.py  test_mode_switching.py  test_queue_manager.py  test_session.py
docs/: protocol.md
firmware/: platformio.ini
firmware/src/: main.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  global.css
frontend/src/api/: client.ts
frontend/src/components/: Contacts.tsx  Dashboard.tsx  Inbox.tsx  TestLab.tsx
frontend/src/hooks/: usePolling.ts
