[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "braille-glove"
version         = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "python-telegram-bot>=21.0",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
